--- a/style.css
+++ b/style.css
@@ -22,17 +22,23 @@ div{
   border: 0px none none;
 }
 .logo-bar {
-  display:inline-block;
-  width: 400px
+  display:inline-block; position:absolute; height: 200px;
+  width: 100%; background-color:#C1D8C3;
 }
 .NavBox {
-  background-color: #C1D8C3; width: 100px; padding-bottom:10px; float:left;
+  background-color: #C1D8C3; position:absolute; top: 250px; width: relative; padding-right 50px; padding-bottom:10px; float:left;
 }
 .logo-fox {
-  display: inline-block;
+  display: inline-block; position: relative; bottom: 25px; left: 200px;
   width: 400px;
 }
 .logo-text {
-  display: inline-block;
+  display: inline-block; position: relative; left:400px; bottom: 200px;
   width: 400px;
+}
+header{
+  position:absolute; display: inline-block;
+}
+.contentbox{
+  position: relative; top: 225px; left:300px;
 }
